--- a/scaffold_toolkit/formvalidator/static/formvalidator/css/formValidation.css
+++ b/scaffold_toolkit/formvalidator/static/formvalidator/css/formValidation.css
@@ -1,6 +1,6 @@
 /**
  * FormValidation (http://formvalidation.io)
- * The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit frameworks
+ * The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit and custom frameworks
  *
  * @author      http://twitter.com/nghuuphuoc
  * @copyright   (c) 2013 - 2015 Nguyen Huu Phuoc
