--- a/scaffold_toolkit/zui/static/zui/lib/chosen/chosen.css
+++ b/scaffold_toolkit/zui/static/zui/lib/chosen/chosen.css
@@ -1,5 +1,5 @@
 /*!
- * ZUI - v1.2.1 - 2015-01-13
+ * ZUI - v1.3.1 - 2015-05-19
  * http://zui.sexy
  * GitHub: https://github.com/easysoft/zui.git 
  * Copyright (c) 2015 cnezsoft.com; Licensed MIT
@@ -133,7 +133,7 @@
 }
 .chosen-container-single .chosen-search input[type="text"] {
   width: 100%;
-  height: auto;
+  height: 27px;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
@@ -147,16 +147,26 @@
   outline: 0;
 }
 .chosen-container-single .chosen-search input[type="text"]:focus {
-  border-color: #18609d;
+  border-color: #145ccd;
 }
 .chosen-container-single .chosen-search:before {
   position: absolute;
-  top: 8px;
+  top: 10px;
   right: 10px;
   display: block;
   font-family: ZenIcon;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
   color: #808080;
-  content: "\e603";
+  text-transform: none;
+  content: '\e603';
+
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .chosen-container-single .chosen-drop {
   margin-top: -1px;
@@ -200,7 +210,7 @@
 }
 .chosen-container .chosen-results li.highlighted {
   color: #fff;
-  background-color: #108bf1;
+  background-color: #3280fc;
 }
 .chosen-container .chosen-results li.no-results {
   display: list-item;
@@ -275,6 +285,29 @@
 .chosen-container-multi .chosen-choices li.search-field .default {
   color: #999;
 }
+.chosen-container-multi .chosen-choices li.search-field:before {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  display: block;
+  font-family: ZenIcon;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  color: #808080;
+  text-transform: none;
+  content: '\e603';
+  opacity: 0;
+  -webkit-transition: opacity .3s cubic-bezier(.175, .885, .32, 1);
+       -o-transition: opacity .3s cubic-bezier(.175, .885, .32, 1);
+          transition: opacity .3s cubic-bezier(.175, .885, .32, 1);
+
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .chosen-container-multi .chosen-choices li.search-choice {
   position: relative;
   padding: 3px 20px 3px 5px;
@@ -337,7 +370,7 @@
   background-position: -42px -10px;
 }
 .chosen-container-multi .chosen-results {
-  padding: 0;
+  padding: 5px 0;
   margin: 0;
 }
 .chosen-container-multi .chosen-drop .result-selected {
@@ -346,9 +379,9 @@
   cursor: default;
 }
 .chosen-container-active .chosen-single {
-  border-color: #18609d;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(24, 96, 157, .6);
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(24, 96, 157, .6);
+  border-color: #145ccd;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(20, 92, 205, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(20, 92, 205, .6);
 }
 .chosen-container-active.chosen-with-drop .chosen-single {
   border: 1px solid #cbcbcb;
@@ -368,12 +401,15 @@
   border-bottom: 4px solid #353535;
 }
 .chosen-container-active .chosen-choices {
-  border-color: #18609d;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(24, 96, 157, .6);
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(24, 96, 157, .6);
+  border-color: #145ccd;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(20, 92, 205, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(20, 92, 205, .6);
 }
 .chosen-container-active .chosen-choices li.search-field input[type="text"] {
   color: #111 !important;
+}
+.chosen-container-active .chosen-choices li.search-field:before {
+  opacity: 1;
 }
 .chosen-disabled {
   cursor: default;
